--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .header {
-	background-image: url("capture.jpg");
+	background-color:black;
 	width: 100%;
 	padding: 1px;
 	text-align: center;
@@ -19,7 +19,7 @@ h2 {
 }
 
 body {
-	background-color: #AEEEEE;
+	background-color:powderblue;
 	font-family: Lato, sans-serif;
 }
 
