--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ body {
 	text-indent: 50px;
 	}
 
+ul, li:focus {
+	outline: 3px dashed;
+	background-color: pink;
+}
+
 ul {
 	list-style-type:none;
 	margin:0px;
