--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+img.chey{
+	float: right;
+	border-radius: 25px;
+	border: 3px solid black;
+}
+
 .header {
 	background-color: black;
 	width: 100%;
