--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-content:focus-within {
-	outline: 3px dashed;
-	background-color: yellow;
-}
-
 .header {
 	background-color: black;
 	width: 100%;
@@ -150,7 +145,8 @@ div.desc {
 }
 
 li:focus-within a {
-	  outline: none;
+	outline: none;
+	background-color: yellow;
 }
 
 ul li ul {
@@ -165,8 +161,9 @@ ul li:hover > ul,
 ul li:focus-within > ul,
 ul li ul:hover,
 ul li ul:focus {
-	  visibility: visible;
-	  display: block
+	visibility: visible;
+	display: block;
+	background-color: yellow;
 }
 
 ul li ul li {
